fixed max-height too small

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .App {
   position: relative;
   max-width: 256px;
-  max-height: 500px;
+  max-height: 600px;
   background-color: white;
   border: 1px solid rgb(220,220,220);
   overflow: hidden;
